# otus_cpp_99_project

./: .gitignore  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  README.md  README_8md.html  annotated.html  appl_8cpp.html  appl_8cpp_8o_8d.html  appl_8cpp__incl.map  appl_8cpp__incl.md5  appl_8h.html  appl_8h__dep__incl.map  appl_8h__dep__incl.md5  appl_8h__incl.map  appl_8h__incl.md5  appl_8h_source.html  bench_2CMakeFiles_2mrpc__bench_8dir_2_____2test_2appl_8cpp_8o_8d.html  bench_2CMakeFiles_2mrpc__bench_8dir_2_____2test_2global__place_8cpp_8o_8d.html  bench_2CMakeFiles_2mrpc__bench_8dir_2_____2test_2tst__custom__drv_8cpp_8o_8d.html  bench_2CMakeFiles_2mrpc__bench_8dir_2main_8cpp_8o_8d.html  bench_2main_8cpp.html  bench_2main_8cpp__incl.map  bench_2main_8cpp__incl.md5  classes.html  classmrpc_1_1i__driver-members.html  classmrpc_1_1i__driver.html  classmrpc_1_1i__driver__inherit__graph.map  classmrpc_1_1i__driver__inherit__graph.md5  classmrpc_1_1i__driver__rp-members.html  classmrpc_1_1i__driver__rp.html  classmrpc_1_1i__driver__rp__inherit__graph.map  classmrpc_1_1i__driver__rp__inherit__graph.md5  classmrpc_1_1i__driver__rp__own-members.html  classmrpc_1_1i__driver__rp__own.html  classmrpc_1_1i__driver__rp__own__inherit__graph.map  classmrpc_1_1i__driver__rp__own__inherit__graph.md5  classmrpc_1_1i__listen__rp-members.html  classmrpc_1_1i__listen__rp.html  classmrpc_1_1i__listen__rp__inherit__graph.map  (+296 more)
.github/workflows/: actions_config.yml
appl/: appl.cpp  appl.h  global_place.cpp  main.cpp  sync_console.cpp  sync_console.h  tst_custom_drv.cpp  tst_custom_drv.h
bench/: CMakeLists.txt  main.cpp
include/mrpc/: i_driver.h  i_driver_rp.h  i_driver_rp_own.h  i_listen_rp.h  i_server.h  iocp_block.h
include/sconsole/: sync_console.h
lib/: protocol.h  server.cpp  server.h  tcp_connect.cpp  tcp_connect.h  tcp_read_obj.h
mrpc_lib/: CMakeLists.txt  cmd_record.h  defer_rec.h  defer_result.h  iocp_block.cpp  protocol.h  server.cpp  server.h  sync_console.cpp  tcp_connect.cpp  tcp_connect.h  tcp_drv.cpp  tcp_drv.h  tcp_read_obj.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+19 more)
test/: CMakeLists.txt  appl.cpp  appl.h  global_place.cpp  main.cpp  tst_custom_drv.cpp  tst_custom_drv.h  work_obj.cpp
